--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,18 @@ html {
 .wp-button:hover {
   box-shadow: 0 2px 15px 2px #999;
 }
+
+.circle span {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  /* background-color: #2d2e32;
+    box-shadow: 0px 0px 5px #00000080; */
+  /* border-radius: 50%; */
+  /* transform-origin: center; */
+  transform-style: preserve-3d;
+  transform: rotateY(calc(var(--i) * calc(360deg / 15))) translateZ(300px);
+}
